# nist_cal

./: CMakeLists.txt  README.md  package.xml
analysis_data/: doit.m  doit0.m  doit1.m  doit10.m  doit2.m  doit3.m  doit4.m  doit5.m  doit6.m  doit7.m  doit8.m  doit9.m  field_points.m  field_points.yaml  field_results.m  field_results0.m  field_results1.m  field_results10.m  field_results2.m  field_results3.m  field_results4.m  field_results5.m  field_results6.m  field_results7.m  field_results8.m  field_results9.m  floor_points.m  floor_points.yaml  nist_cameras.yaml  post_analysis_data.txt  post_analysis_data2.txt
camera_info/: Basler1.yaml  Basler2.yaml  Basler3.yaml  Basler7.yaml
camera_info/Nist_cameras/: Basler1.yaml  Basler4.yaml  Basler5.yaml  Basler6.yaml  Basler7.yaml
camera_info/Swri_cameras/: Basler1.yaml  Basler2.yaml  Basler3.yaml  Basler4.yaml  Basler5.yaml  Basler6.yaml  Basler7.yaml  Basler8.yaml  Basler9.yaml
circle/: CMakeLists.txt  package.xml
circle/launch/: linear_rail.launch
circle/src/: bullseye_analysis.cpp  bullseye_analysis2.cpp  bullseye_analysis3.cpp  bullseye_analysis4.cpp  bullseye_analysis5.cpp  bullseye_analysis6.cpp  ceres_cost_utils.cpp  circledetector.cpp  circletest.cpp  ellipse_test.cpp  linear_rail.cpp  outline.txt  slant_analysis.cpp
circle/srv/: linear_mv.srv  n_images.srv
data/: observation_data.yaml
doc/: CameraRobotCalibration.docx  Users_guide.ppt
launch/: nist_anal.launch  nist_analysis.launch  nist_calibration.launch  nist_cameras.launch  nist_grid.launch  only_B1.launch  only_B2.launch  only_B3.launch  only_B4.launch  only_B5.launch  only_B6.launch  only_B7.launch  single_camera.launch  swri_calibration.launch  swri_cameras.launch  swri_cameras.yaml
nist_moveit_config_saved/: .setup_assistant  CMakeLists.txt  package.xml
nist_moveit_config_saved/config/: joint_limits.yaml  ur5.srdf
nist_moveit_config_saved/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  move_group.launch~  moveit_rviz.launch  nist_moveit_planning_execution.launch  nist_moveit_planning_execution.launch~  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_context.launch~  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_moveit_controller_manager.launch.xml  warehouse.launch
robot_stuff/config/: joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ur10.srdf
robot_stuff/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  nist_moveit_planning_execution.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur10_moveit_controller_manager.launch.xml  warehouse.launch
scripts/: aaToR.m  rotToZYX.m  rotToaa.m  rotToq.m  rotx.m  roty.m  rotz.m
urdf/: ur10_robot_cal.urdf.xacro  ur5_robot_cal.urdf.xacro
yaml/: .#nist_caljob_c367.yaml  caljob_basler1.yaml  caljob_basler3.yaml  caljob_basler3_save.yaml  caljob_basler4n5.yaml  caljob_basler6.yaml  caljob_basler6.yaml_save  caljob_basler7.yaml  caljob_conglomerate.yaml  caljob_single_ball.yaml  camera_scene_mutable_joint_states.yamlnew  nist_caljob.yaml  nist_caljob_full.yaml  nist_cameras.yaml  nist_mutable_joint_states.yaml  nist_mutable_joint_states.yamlnew  nist_mutable_joint_states.yamlsave  nist_targets.yaml  single_ball.yaml
yaml/results/: nmjs1.yaml  nmjs10.yaml  nmjs11.yaml  nmjs12.yaml  nmjs13.yaml  nmjs14.yaml  nmjs15.yaml  nmjs16.yaml  nmjs2.yaml  nmjs3.yaml  nmjs4.yaml  nmjs5.yaml  nmjs6.yaml  nmjs7.yaml  nmjs8.yaml  nmjs9.yaml
yaml/swri_files/: B9_caljob.yaml  nist_mutable_joint_states.yaml  swri_caljob.yaml  swri_mutable_joint_states.yamlnew
